--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -206,7 +206,7 @@ section#logos {
 	padding-left: 15px;
 }
 div.container.gallery{
-	width: 885px !important;
+	width: 95% !important;
 }
 div.span10 h2{
 	padding-top: 0px;	
