--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -683,3 +683,27 @@ label.checkbox.inline{
     height: 20px;
     width: 100%;
 }
+.top5 { margin-top:5px; }
+.top7 { margin-top:7px; }
+.top10 { margin-top:10px; }
+.top15 { margin-top:15px; }
+.top17 { margin-top:17px; }
+.top30 { margin-top:30px; }
+
+.bordeInferiorGrueso {
+    border-bottom: 3px solid;
+}
+
+.panelAzul{
+    background-color: blue;
+    color: #FFF;
+}
+
+.panelMarron{
+    background-color: brown;
+    color: #FFF;
+}
+
+.vinculo{
+    cursor: pointer;
+}
