--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -194,11 +194,11 @@ section#logos {
 	margin-left: auto;
 	padding-top: 15px;
 	padding-right: 20px;
-	padding-bottom: 20px;
+	padding-bottom: 60px;
 	padding-left: 20px;
 }
 .modalResponder textarea {
-	width: 380px!important;
+	/*width: 380px!important;*/
 }
 
 .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
