--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -630,6 +630,14 @@ pre code {
     font-size: 18px;
   }
 }
+.modal-dialog{
+    max-height: 100%;
+    overflow-y: auto;
+}
+
+.pad15{
+    padding: 0px 15px;
+}
 /* Small devices (tablets, 768px and up) */
 /* Medium devices (desktops, 992px and up) */
 /* Large devices (large desktops, 1200px and up) */
