--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -15,6 +15,170 @@
 	     url('http://assets.citep.fastbox.co/css/fonts/NexaLight,Helvetica,Arial.svg#NexaLight,Helvetica,Arial') format('svg');
 		 
 }*/
+
+.logoCitepUbaFooter{
+    display: none;
+}
+
+body{
+    background-color: #F6F6F6;
+}
+/*menu*/
+.mm-menu{
+    background-color: #019CDF;
+}
+.mm-next:after,.mm-btn:before, .mm-menu, .mm-title{
+    color: white !important;
+    border-color: white !important;
+}
+
+/*menu end*/
+.iconoGrande{
+    font-size: 50px;
+    background-color: #DADADA;
+    color:   #FFFFFF;
+}
+
+.logoCitepUba, .logoCitepMic{
+    background-color: #F1EFF0;
+    padding-top: 30px;
+}
+.logoCitepMic{
+    float: left;
+    padding-left: 10px;
+}
+.logoCitepMicImagen img{
+    height: 100%;
+    width: auto;
+}
+.logoCitepUba {
+    float: right;
+    padding-right: 10px;
+}
+.logoCitepUba img{
+    max-height: 76px;
+    width: auto;
+}
+.encabezadoApp{
+    background-color: #F1EFF0;
+    width: 100%;
+    height: 100%;
+}
+.encabezado{
+    background-color: #F7F7F7;
+}
+.botonMenu{
+    margin-left: 5%;
+    margin-top: 10px;
+}
+.footer{
+    background-color: #F1EFF0;
+    margin: 30px 0 0 0;
+}
+.citepMICFOOTER{
+    padding-bottom: 20px;
+}
+.encabezadoMic{
+    background-color: #F7F7F7;
+    max-height: 100%;
+    height: 100%;
+}
+.blanco{
+    background-color: white;
+}
+
+.cuerpoContenido{
+    padding: 2% 2%;
+}
+.referencia{
+    width: 100%;
+    color: #000000;
+}
+.iconoReferencia{
+    color: #646464;
+    margin-right: 1%;
+}
+.cambiarAlias{
+    color: #01037A;
+}
+
+
+.linkListado{
+    margin-left: 10px;
+    cursor: pointer;
+}
+.iconoReferencia i, .linkListado {
+    color: #181818;
+
+}
+.wrapperTotal{
+    background-color: #F7F7F7;
+}
+.botonera{
+    padding-top: 30px ;
+    padding-bottom: 30px;
+}
+.tablaGigante{
+    overflow-x: scroll;
+    width: 100%;
+}
+
+.contenedorRespuestasPorPublicar{
+    margin-bottom: 2%;
+}
+
+.footerCitep{
+    text-align: center;
+    color: #656565;
+    font-weight: 700;
+    padding: 30px 0 20px 0;
+}
+.imagenResponder{
+    width: 100%;
+}
+.imagenModal{
+    width: 100%;
+}
+
+.panelGrisClaro{
+    margin-bottom: 3%;
+    padding: 1% 0 2% 0;
+}
+div.ui-state-active,div.ui-state-default ,.panelGrisClaro{
+    background-color:#E7E7E7 ;
+}
+div.ui-accordion .ui-accordion-header{
+    margin: 3% 0 0 0;
+}
+.contenedorRespuestasPublicas{
+    margin-bottom: 3%;
+    padding: 1% 0 2% 0;
+}
+.par{
+    color: #6F9565;
+}
+.impar{
+    color: #3E4C3B;
+}
+
+.tituloFoco{
+    color: #F90778;
+    font-weight: bold;
+    width: 100%;
+}
+.preguntaFoco{
+    color: #00A2FB;
+    font-weight: bolder;
+    width: 100%;
+}
+
+.subir{
+    color: black;
+}
+.subir:before{
+    content: '↑ ';
+}
+
 li{
 	list-style-type: none!important;	
 	}
@@ -51,6 +215,18 @@ li{
 	font-family: NexaLight,Helvetica,Arial;
 	font-size: 28px;
 	color: #333;
+}
+.logoxxsmall{
+    font-family: NexaBold,Helvetica,Arial;
+    font-size: 16px;
+    font-weight: 800;
+    color: #333;
+}
+.logolightxxsmall{
+    font-family: NexaLight,Helvetica,Arial;
+    font-size: 12px;
+    font-weight: 200;
+    color: #333;
 }
 .navbar .brand:hover {
 	color: #000;
@@ -118,10 +294,6 @@ a:hover, a:focus {
 	text-decoration: none !important;
 }
 
-section {
-    margin-top: 80px;
-
-}
 section#logos {
     margin-top: 120px;
 
@@ -727,4 +899,8 @@ label.checkbox.inline{
 .imagenArquetipo{
     width: 100%;
     max-width: 200px;
+}
+.abrirMenu{
+    background-color: white;
+    color: #DCDCDC;
 }
