--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -16,13 +16,17 @@
 		 
 }*/
 
-.logoCitepUbaFooter{
+.logoCitepUbaFooter, .encabezadoAppMobile{
     display: none;
 }
 
 body{
     background-color: #F6F6F6;
 }
+#menuL{
+    display: none;
+}
+
 /*menu*/
 .mm-menu{
     background-color: #019CDF;
@@ -39,15 +43,16 @@ body{
     color:   #FFFFFF;
 }
 
-.logoCitepUba, .logoCitepMic{
+.logoCitepUba, .logoCitepMic,{
     background-color: #F1EFF0;
     padding-top: 30px;
 }
 .logoCitepMic{
     float: left;
     padding-left: 10px;
+    padding-top: 10px;
 }
-.logoCitepMicImagen img{
+.logoCitepMic img{
     height: 100%;
     width: auto;
 }
@@ -59,8 +64,10 @@ body{
     max-height: 76px;
     width: auto;
 }
-.encabezadoApp{
+.encabezadoApp,.encabezadoAppMobile {
     background-color: #F1EFF0;
+}
+.encabezadoApp{
     width: 100%;
     height: 100%;
 }
@@ -70,6 +77,11 @@ body{
 .botonMenu{
     margin-left: 5%;
     margin-top: 10px;
+}
+
+.iconoMicFooter, .logoMicHeader{
+    width: 100%;
+    height: auto;
 }
 .footer{
     background-color: #F1EFF0;
@@ -100,6 +112,55 @@ body{
 }
 .cambiarAlias{
     color: #01037A;
+}
+
+
+@media (max-width: 767px) {
+
+    .encabezadoApp{
+        display: none;
+    }
+    .encabezadoAppMobile{
+        display: block;
+        width: inherit;
+        height: 50px;
+        margin-left: -20px;
+        margin-right: -20px;
+        padding-top: 12px;
+        padding-bottom: 7px;
+    }
+    .encabezadoOculto{
+        margin: 0 !important;
+        display: inline;
+    }
+    .iconoReferencia{
+        margin-right: 20px;
+        margin-bottom: 20px;
+        display: inline-block;
+        font-size: 0.8em;
+    }
+    .logoCitepUba{
+        display:none;
+    }
+    .logoCitepUbaFooter{
+        display:inline-block;
+    }
+    .logoMicHeader{
+        margin-top: 15px;
+    }
+    .logoCitepMic{
+        float: left;
+        width: 100%;
+        height: inherit;
+        padding: 0;
+    }
+    .logoCitepMic img{
+        width: auto;
+        height: 100%;
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+    }
 }
 
 
