--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -16,12 +16,19 @@
 		 
 }*/
 
+*{
+    font-family: 'Roboto', sans-serif ;
+}
+
 .logoCitepUbaFooter, .encabezadoAppMobile{
     display: none;
 }
 
 body{
     background-color: #F6F6F6;
+    /*max-width: 1600px;
+    margin-left: auto;
+    margin-right: auto;LIMITAR ANCHO*/
 }
 #menuL{
     display: none;
