--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,7 +9,6 @@
 /* Default */
 /* ======= Base ======= */
 body {
-  font-family: 'Lato', arial, sans-serif;
   color: #444;
   font-size: 16px;
   -webkit-font-smoothing: antialiased;
@@ -18,7 +17,7 @@ body {
 h1,
 h2,
 h3{
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-weight: 700;
   color: #17baef;
 }
@@ -45,7 +44,7 @@ a.btn {
   -moz-transition: all 0.4s ease-in-out;
   -ms-transition: all 0.4s ease-in-out;
   -o-transition: all 0.4s ease-in-out;
-  font-family: 'Montserrat', arial, sans-serif;
+  font-family: 'Roboto', arial, sans-serif;
   padding: 8px 16px;
   font-weight: bold;
 }
@@ -150,7 +149,7 @@ pre code {
 .header .main-nav .nav .nav-item {
   font-weight: normal;
   margin-right: 30px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 .header .main-nav .nav .nav-item.active a {
   color: #FFFFFF;
