--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1028,6 +1028,7 @@ label.checkbox.inline{
 }
 .sinBorde{
     border: 0px !important;
+    box-shadow: 0 0 0 rgba(0,0,0,.05) !important;
 }
 
 .pestania{
